@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import javax.swing.JRadioButton;
+import javax.swing.SwingUtilities;
 import java.awt.event.KeyEvent;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -11,46 +12,50 @@ import java.util.List;
 
 public class KButtonGroupTest {
     @Test
-    public void basicTest_1() {
-        JRadioButton rb1 = new JRadioButton("rb1");
-        JRadioButton rb2 = new JRadioButton("rb2");
-        var group = new KButtonGroup<>(List.of(rb1, rb2));
-        Assertions.assertTrue(rb1.isSelected());
-        Assertions.assertFalse(rb2.isSelected());
-        Assertions.assertEquals(group, rb1.getModel().getGroup());
-        Assertions.assertEquals(group, rb2.getModel().getGroup());
-        Assertions.assertEquals(0, group.getSelectedIndex());
-        Assertions.assertEquals(2, group.getButtonCount());
-        Assertions.assertEquals(rb1, group.getSelectedButton());
-        Assertions.assertEquals(List.of(rb1, rb2), group.getButtons());
-        Assertions.assertEquals(rb1, group.getButton(0));
-        Assertions.assertEquals(rb2, group.getButton(1));
+    public void basicTest_1() throws Exception {
+        SwingUtilities.invokeAndWait(() -> {
+            JRadioButton rb1 = new JRadioButton("rb1");
+            JRadioButton rb2 = new JRadioButton("rb2");
+            var group = new KButtonGroup<>(List.of(rb1, rb2));
+            Assertions.assertTrue(rb1.isSelected());
+            Assertions.assertFalse(rb2.isSelected());
+            Assertions.assertEquals(group, rb1.getModel().getGroup());
+            Assertions.assertEquals(group, rb2.getModel().getGroup());
+            Assertions.assertEquals(0, group.getSelectedIndex());
+            Assertions.assertEquals(2, group.getButtonCount());
+            Assertions.assertEquals(rb1, group.getSelectedButton());
+            Assertions.assertEquals(List.of(rb1, rb2), group.getButtons());
+            Assertions.assertEquals(rb1, group.getButton(0));
+            Assertions.assertEquals(rb2, group.getButton(1));
 
-        rb2.setSelected(true);
-        Assertions.assertFalse(rb1.isSelected());
-        Assertions.assertTrue(rb2.isSelected());
+            rb2.setSelected(true);
+            Assertions.assertFalse(rb1.isSelected());
+            Assertions.assertTrue(rb2.isSelected());
 
-        group.setSelectedIndex(0);
-        Assertions.assertTrue(rb1.isSelected());
-        Assertions.assertFalse(rb2.isSelected());
+            group.setSelectedIndex(0);
+            Assertions.assertTrue(rb1.isSelected());
+            Assertions.assertFalse(rb2.isSelected());
+        });
     }
 
     @Test
-    public void allSelected() {
-        JRadioButton rb1 = new JRadioButton("rb1", true);
-        JRadioButton rb2 = new JRadioButton("rb2", true);
-        var group = new KButtonGroup<>(false);
-        Assertions.assertEquals(Collections.emptyList(), group.getButtons());
-        group.addButtons(rb1, rb2);
-        Assertions.assertEquals(List.of(rb1, rb2), group.getButtons());
-        Assertions.assertTrue(rb1.isSelected());
-        Assertions.assertFalse(rb2.isSelected());
+    public void allSelected() throws Exception {
+        SwingUtilities.invokeAndWait(() -> {
+            JRadioButton rb1 = new JRadioButton("rb1", true);
+            JRadioButton rb2 = new JRadioButton("rb2", true);
+            var group = new KButtonGroup<>(false);
+            Assertions.assertEquals(Collections.emptyList(), group.getButtons());
+            group.addButtons(rb1, rb2);
+            Assertions.assertEquals(List.of(rb1, rb2), group.getButtons());
+            Assertions.assertTrue(rb1.isSelected());
+            Assertions.assertFalse(rb2.isSelected());
+        });
     }
 
     @Test
-    public void allUnselected() {
-        JRadioButton rb1 = new JRadioButton("rb1", false);
-        JRadioButton rb2 = new JRadioButton("rb2", false);
+    public void allUnselected() throws Exception {
+        var rb1 = new JRadioButton("rb1", false);
+        var rb2 = new JRadioButton("rb2", false);
         var group = new KButtonGroup<>(false);
         group.addButtons(rb1, rb2);
         Assertions.assertFalse(rb1.isSelected());
@@ -60,10 +65,10 @@ public class KButtonGroupTest {
     }
 
     @Test
-    public void addItemListener() {
-        JRadioButton rb1 = new JRadioButton("rb1");
-        JRadioButton rb2 = new JRadioButton("rb2");
-        JRadioButton rb3 = new JRadioButton("rb3");
+    public void addItemListener() throws Exception {
+        var rb1 = new JRadioButton("rb1");
+        var rb2 = new JRadioButton("rb2");
+        var rb3 = new JRadioButton("rb3");
         var group = new KButtonGroup<>(rb1, rb2, rb3);
         var events = new ArrayList<KButtonGroupEvent<JRadioButton>>();
         group.addListener(events::add);
@@ -86,14 +91,23 @@ public class KButtonGroupTest {
     }
 
     @Test
-    public void setMnemonics() {
-        JRadioButton rb1 = new JRadioButton("abc");
-        JRadioButton rb2 = new JRadioButton("abc");
-        JRadioButton rb3 = new JRadioButton("abc");
-        var group = new KButtonGroup<>(rb1, rb2, rb3);
-        group.setMnemonics();
-        Assertions.assertEquals(KeyEvent.VK_A, rb1.getMnemonic());
-        Assertions.assertEquals(KeyEvent.VK_B, rb2.getMnemonic());
-        Assertions.assertEquals(KeyEvent.VK_C, rb3.getMnemonic());
+    public void unselectAllButtons() throws Exception {
+        // TODO
+        SwingUtilities.invokeAndWait(() -> {
+        });
+    }
+
+    @Test
+    public void setMnemonics() throws Exception {
+        SwingUtilities.invokeAndWait(() -> {
+            var rb1 = new JRadioButton("abc");
+            var rb2 = new JRadioButton("abc");
+            var rb3 = new JRadioButton("abc");
+            var group = new KButtonGroup<>(rb1, rb2, rb3);
+            group.setMnemonics();
+            Assertions.assertEquals(KeyEvent.VK_A, rb1.getMnemonic());
+            Assertions.assertEquals(KeyEvent.VK_B, rb2.getMnemonic());
+            Assertions.assertEquals(KeyEvent.VK_C, rb3.getMnemonic());
+        });
     }
 }
